--- a/public/index.html
+++ b/public/index.html
@@ -10,35 +10,15 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <title>Barber Shop</title>
-    <link rel="stylesheet" href="/src/LandingPage/style.css">
+    <title>BarberShop</title>
   </head>
   <body>
-    <header class="topo">
-      <div class="container-topo">
-        <img  class="logo" src="/public/assets/barbearia-logo.png" alt="Dark">
-        <button type="button">
-          <img class="dark-light" src="/public/assets/moon.png" alt="Dark">
-          <p>Dark</p>
-        </button>
-      </div>
-    </header>
-    <section class="banner">
-    </section>
-    <section class="sobre">
-      <h1>Bem-vindo a Barber Shop</h1>
-      <p class="sobre1" >Nossa barbearia sempre oferece profissionais de qualidade e estamos prontos para lidar com suas maiores expectativas.</p>
-      <p>Nossos serviços são dedicados ao seu sucesso pessoal. Aqui temos uma equipe premiada que demonstrou o talento de mestres barbeiros em vários concursos de estilo. Deixe nosso barbeiro ser seu estilista pessoal e você nunca ficará desapontado.</p>
-      <p class="kelly" >S. Kelly</p>
-    </section>
-
-    
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
